objects/X9902Summary__c.object
<CustomObject>
    <fields>
        <fullName>GroupSessionAttendeeState__c</fullName>
        <label>Group Session Attendee State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>AK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>AL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>AR</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>AS</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>AZ</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>DC</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>HI</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>IL</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>KS</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>KY</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>LA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>MA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>MH</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>MN</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>MP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionAttendeeZipCode__c</fullName>
        <label>Group Session Attendee Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionAttributeHUD_Grant__c</fullName>
        <description>Indicates the HUD grant associated with the group session.</description>
        <inlineHelpText>Select the appropriate HUD grant from the picklist that corresponds to the group session attribute.</inlineHelpText>
        <label>Group Session Attribute HUD Grant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Comprehensive</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>MMMSA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Colonias</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>HECM</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>S8</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Predatory Lending</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupSessionCounselorHUDId__c</fullName>
        <label>Group Session Counselor HUD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionCounselorID__c</fullName>
        <label>Group Session Counselor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionDate__c</fullName>
        <label>Group Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GroupSessionDuration__c</fullName>
        <label>Group Session Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupSessionID__c</fullName>
        <label>Group Session ID </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionTitle__c</fullName>
        <label>Group Session Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSessionType__c</fullName>
        <description>Indicates the type of group session conducted.</description>
        <inlineHelpText>Select the appropriate option from the picklist to categorize the type of group session conducted.</inlineHelpText>
        <label>Group Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                    <label>Pre-purchase Homebuyer Education</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Financial Literacy (Including Home Affordability, Budgeting, and Understanding Use of Credit)</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Resolving or Preventing Mortgage Delinquency</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Non-Delinquency post-purchase (Including Home Maintenance and/or Financial Management for Homeowners)</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Fair Housing</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Predatory Lending Loan Scam or Other Fraud Prevention</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Rental</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Homelessness Prevention</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Disaster Preparedness</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Disaster recovery</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HUDAMIChosenottorespond__c</fullName>
        <label>HUD Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDAmericanIndianAlaskanNative__c</fullName>
        <description>Indicates whether the individual identifies as American Indian or Alaskan Native.</description>
        <inlineHelpText>Select this option if the individual identifies as being of American Indian or Alaskan Native descent.</inlineHelpText>
        <label>HUD American Indian/Alaskan Native</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDAsian__c</fullName>
        <description>Indicates whether the individual identifies as Asian.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Asian descent.</inlineHelpText>
        <label>HUD Asian</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDBlackorAfricanAmerican__c</fullName>
        <description>Indicates whether the individual identifies as Black or African American.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Black or African American descent.</inlineHelpText>
        <label>HUD Black or African American</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDChoseNottoRespond__c</fullName>
        <description>Indicates that the individual chose not to disclose their ethnicity.</description>
        <inlineHelpText>Select this option if the individual declined to provide information about their ethnicity or chose not to disclose it.</inlineHelpText>
        <label>HUD Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDCompletedDisasterPreparedness__c</fullName>
        <description>Indicates that the individual has completed a disaster preparedness workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop focused on preparing for and responding to disasters</inlineHelpText>
        <label>HUD Completed Disaster Preparedness Wor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDCompletedfairhousingworkshop__c</fullName>
        <description>Indicates that the individual has completed a fair housing workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop that provides information about fair housing</inlineHelpText>
        <label>HUD Completed fair housing workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDCompletedfinancialliteracy__c</fullName>
        <description>Indicates that the individual has completed a financial literacy workshop.</description>
        <inlineHelpText>Completed financial literacy workshop, including home affordability, budgeting and understanding use of credit.</inlineHelpText>
        <label>HUD Completed financial literacy work</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDCompletedpredatorylending__c</fullName>
        <description>Indicates that the individual has completed a workshop on predatory lending</description>
        <inlineHelpText>Completed predatory lending, loan scam or other fraud prevention workshop.</inlineHelpText>
        <label>HUD Completed predatory lending </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDCompletedrentalworkshop__c</fullName>
        <description>Indicates that the individual has completed a rental workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop covering topics related to renting</inlineHelpText>
        <label>HUD Completed rental workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDDisasterPreparednessAssistance__c</fullName>
        <description>Indicates whether the individual received education or assistance related to disaster preparedness.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to disaster preparedness, such as creating emergency plans, assembling disaster kits, or accessing community resources in the event of a disaster.</inlineHelpText>
        <label>HUD Disaster Preparedness Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDDisasterRecoveryAssistance__c</fullName>
        <description>Indicates whether the individual received assistance related to disaster recovery.</description>
        <inlineHelpText>Select this option if the individual received assistance for disaster recovery, such as financial aid, temporary housing, or support services, following a natural disaster or other catastrophic event.</inlineHelpText>
        <label>HUD Disaster Recovery Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDDisasterRecoveryHousingResources__c</fullName>
        <description>Indicates whether individuals gained access to housing resources for disaster recovery.</description>
        <inlineHelpText>Select this option if individuals obtained resources such as temporary housing, rental assistance, or housing rehabilitation programs to aid in their recovery from a disaster.</inlineHelpText>
        <label>HUD Disaster Recovery Housing Resources</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDDisasterRecoveryNonhousing__c</fullName>
        <description>Indicates whether individuals gained access to non-housing resources for disaster recovery.</description>
        <inlineHelpText>Select this option if individuals obtained resources such as financial assistance, food aid, medical services, or other support to aid in their recovery from a disaster.</inlineHelpText>
        <label>HUD Disaster Recovery Non-housing Reso</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDDisasterRecoveryWorkshop__c</fullName>
        <description>Indicates that the individual has completed a disaster recovery workshop.</description>
        <inlineHelpText>Select this option if the individual has successfully completed a workshop that provides guidance on recovering from the aftermath of a disaster</inlineHelpText>
        <label>HUD Disaster Recovery Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDEmergencyPreparednessPlan__c</fullName>
        <description>Indicates whether individuals developed an emergency preparedness plan.</description>
        <inlineHelpText>Select this option if individuals created a plan outlining steps to take in the event of emergencies, natural disasters, or other crises to ensure safety and minimize risks.</inlineHelpText>
        <label>HUD Emergency Preparedness Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDForwardModImprovedFinancial__c</fullName>
        <description>Indicates whether individuals improved financial capacity through forward mortgage modifications.</description>
        <inlineHelpText>Select this option if individuals successfully improved their financial capacity</inlineHelpText>
        <label>HUD Forward Mod Improved Financial Cap</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDForwardMortgageDelinquencyor__c</fullName>
        <description>Indicates whether the individual experienced delinquency or default on a forward mortgage.</description>
        <inlineHelpText>Select this option if the individual experienced delinquency or default on a forward mortgage.</inlineHelpText>
        <label>HUD Forward Mortgage Delinquency or Def</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDForwardMortgageModImproved__c</fullName>
        <description>Indicates whether individuals improved financials through forward mortgage modifications.</description>
        <inlineHelpText>Select this option if individuals successfully renegotiated the terms of their mortgage to improve their financial situation.</inlineHelpText>
        <label>HUD Forward Mortgage Mod Improved Finan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDGainedAccesstoNonHousing__c</fullName>
        <description>Indicates whether the individual gained access to non-housing resources.</description>
        <inlineHelpText>&quot;Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits
such as Social Security or Medicaid, etc) after receiving Housing Counseling Services.&quot;</inlineHelpText>
        <label>HUD Gained Access to Non-Housing Resour</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHispanic__c</fullName>
        <description>Indicates whether the individual identifies as Hispanic or Latino</description>
        <inlineHelpText>Select this option if the individual identifies as being of Hispanic or Latino origin.</inlineHelpText>
        <label>HUD Hispanic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHomeMaintenance__c</fullName>
        <description>Indicates whether the individual received education or assistance related to home maintenance.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to home maintenance, such as repairs, renovations, or energy efficiency upgrades. (Non-Delinquency Post-Purchase)</inlineHelpText>
        <label>Home Maintenance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHomelessAssistance__c</fullName>
        <description>Indicates whether the individual received assistance related to homelessness.</description>
        <inlineHelpText>Select this option if the individual received assistance for homelessness, such as emergency shelter, housing vouchers, or support services.</inlineHelpText>
        <label>HUD Homeless Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHomelessnessPreventionWorkshop__c</fullName>
        <description>Indicates that the individual has completed a workshop focused on homelessness prevention.</description>
        <inlineHelpText>Completed homelessness prevention workshop.</inlineHelpText>
        <label>HUD Homelessness Prevention Workshop </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHomelessobtainedHousing__c</fullName>
        <description>Indicates whether homeless individuals obtained housing.</description>
        <inlineHelpText>Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Homeless obtained Housing</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholddoesnotliveinarural__c</fullName>
        <description>Indicates that the household does not reside in a rural area</description>
        <inlineHelpText>Select this option if the household does not reside in a rural area</inlineHelpText>
        <label>HUD Household does not live in a rural</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdisLimitedEnglish__c</fullName>
        <description>Indicates that the household has limited proficiency in the English language.</description>
        <inlineHelpText>Select this option if the household has limited proficiency in the English language</inlineHelpText>
        <label>HUD Household is Limited English Profic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdlivesinaruralarea__c</fullName>
        <description>Indicates that the household resides in a rural area.</description>
        <inlineHelpText>Select this option if the household resides in a rural area</inlineHelpText>
        <label>HUD Household lives in a rural area</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdsGainedAccessto__c</fullName>
        <description>Indicates whether the household gained access to resources.</description>
        <inlineHelpText>Households that gained access to resources to help them improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Households Gained Access to Resourc</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdsImprovedFinancial__c</fullName>
        <description>Indicates whether the household&apos;s financial capacity has improved.</description>
        <inlineHelpText>Households that improved their financial capacity (e.g.increased discretionary income, decreased debt load,increased savings, increased credit score) after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Households Improved Financial Capa</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdsImprovedLiving__c</fullName>
        <description>Indicates whether households have improved living conditions.</description>
        <inlineHelpText>Households that received rental counseling and improved living conditions after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Households Improved Living Conditio</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdsReceivedRental__c</fullName>
        <description>Indicates whether households received counseling related to rental housing.</description>
        <inlineHelpText>Households that received rental counseling and avoided eviction after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Households Received Rental Counse</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDHouseholdsReceivedReverseMortgage__c</fullName>
        <description>Indicates whether households received assistance related to reverse mortgages.</description>
        <inlineHelpText>Households that received reverse mortgage counseling and obtained a Home Equity Conversion Mortgage (HECM after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Households Received Reverse Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDLimitedEnglishProficienChoseNotTo__c</fullName>
        <description>Indicates that the household declined to provide information about their English proficiency.</description>
        <inlineHelpText>Select this option if the household chose not to disclose information</inlineHelpText>
        <label>HUD Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDMoreThanoneRace__c</fullName>
        <label>HUD More Than one Race</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDMortgageDelinquencyWorkshop__c</fullName>
        <description>Indicates that the individual has completed a workshop on mortgage delinquency.</description>
        <inlineHelpText>Completed resolving or preventing mortgage delinquency workshop.</inlineHelpText>
        <label>HUD Mortgage Delinquency Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDMultiRaceChosenottorespond__c</fullName>
        <description>Indicates that the individual declined to provide information about their race or ethnicity.</description>
        <inlineHelpText>Select this option if the individual chose not to disclose their race or ethnicity.</inlineHelpText>
        <label>HUD Chose Not To Respond </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDNativeHawaiian__c</fullName>
        <description>Indicates whether the individual identifies as Native Hawaiian.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Native Hawaiian descent.</inlineHelpText>
        <label>HUD Native Hawaiian</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDNonDelinquencyPostPurchaseCoun__c</fullName>
        <description>Indicates whether individuals received counseling related to post-purchase homeownership.</description>
        <inlineHelpText>Households that received non-delinquency post-purchase counseling that were able to improve home conditions or home affordability after receiving Housing CounselingServices.</inlineHelpText>
        <label>HUD Non-Delinquency Post-Purchase Coun</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDNonDelinquencyPostPurchaseWork__c</fullName>
        <description>Indicates that the individual has completed a post-purchase workshop focusing on non-delinquency issues.</description>
        <inlineHelpText>Completed non-delinquency post-purchase workshop,including home maintenance and/or financial management for homeowners.</inlineHelpText>
        <label>HUD Non-Delinquency Post-Purchase Work</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDNotHispanic__c</fullName>
        <description>ndicates that the individual does not identify as Hispanic or Latino.</description>
        <inlineHelpText>Select this option if the individual does not identify as being of Hispanic or Latino origin.</inlineHelpText>
        <label>HUD Not Hispanic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDNotLimitedEnglishProficient__c</fullName>
        <description>Indicates that the household does not have limited proficiency in the English language.</description>
        <inlineHelpText>Select this option if the household does not have limited proficiency in the English language</inlineHelpText>
        <label>HUD Not Limited English Proficient </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDOneononeCounseling__c</fullName>
        <description>Indicates whether the individual received one-on-one counseling.</description>
        <inlineHelpText>Households that received one-on-one counseling that also received group education services.</inlineHelpText>
        <label>HUD One-on-one Counseling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDPrepurchaseHomebuyingCounseling__c</fullName>
        <description>Indicates whether individuals received counseling related to homebuying.</description>
        <inlineHelpText>Households that received prepurchase/homebuying counseling and purchased housing after receiving Housing Counseling Services.</inlineHelpText>
        <label>HUD Prepurchase/Homebuying Counseling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDPrepurchaseHomebuying__c</fullName>
        <description>Indicates whether the individual received education or assistance related to homebuying.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to purchasing a home, such as mortgage options, homebuyer education, or down payment assistance programs.</inlineHelpText>
        <label>HUD Prepurchase/Homebuying</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDPrepurchasehomebuyereducation__c</fullName>
        <description>Indicates that the individual has completed a prepurchase homebuyer education workshop.</description>
        <inlineHelpText>Completed pre-purchase homebuyer education workshop.</inlineHelpText>
        <label>HUD Prepurchase homebuyer education work</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDPreventedForwardMortgageDefault__c</fullName>
        <description>Indicates whether individuals prevented a default on a forward mortgage.</description>
        <inlineHelpText>Select this option if individuals successfully avoided defaulting on a forward mortgage by taking appropriate actions.</inlineHelpText>
        <label>HUD Prevented Forward Mortgage Default</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDPreventedReverseMortgageDefault__c</fullName>
        <description>Indicates whether individuals prevented a default on a reverse mortgage.</description>
        <inlineHelpText>Select this option if individuals successfully avoided defaulting on a reverse mortgage by taking appropriate actions.</inlineHelpText>
        <label>HUD Prevented Reverse Mortgage Default </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDReceivedInformationonFair__c</fullName>
        <description>Indicates whether the individual received information on fair housing.</description>
        <inlineHelpText>Households that received information on fair housing, fair lending and/or accessibility rights.</inlineHelpText>
        <label>HUD Received Information on Fair Hous</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDRentalTopics__c</fullName>
        <description>Indicates whether the individual received education or assistance related to renting a home.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to renting a home, such as tenant rights, lease agreements, or rental assistance programs.</inlineHelpText>
        <label>HUD Rental Topics</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDReverseMortgageDelinquencyor__c</fullName>
        <description>Indicates whether the individual experienced delinquency or default on a reverse mortgage.</description>
        <inlineHelpText>Select this option if the individual experienced delinquency or default on a reverse mortgage.</inlineHelpText>
        <label>HUD Reverse Mortgage Delinquency or Def</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDReverseMortgage__c</fullName>
        <description>Indicates whether the individual received information or assistance related to reverse mortgages.</description>
        <inlineHelpText>Select this option if the individual received information or assistance related to reverse mortgages.</inlineHelpText>
        <label>HUD Reverse Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDRuralChosenottorespond__c</fullName>
        <description>Indicates that the household declined to provide information about their residence type.</description>
        <inlineHelpText>Select this option if the household chose not to disclose information</inlineHelpText>
        <label>HUD Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>